new image paths

--- a/_posts/2013-09-11-another-version-of-this-bar-chart-of-cable-prices.html
+++ b/_posts/2013-09-11-another-version-of-this-bar-chart-of-cable-prices.html
@@ -6,4 +6,4 @@ tags:
 tumblr_url: http://chartsnthings.tumblr.com/post/60993209426/another-version-of-this-bar-chart-of-cable-prices
 ---
 
-<img src="{{site.baseurl | asset_path: page.id}}/tumblr_mszso5TWVp1r5aoz1o1_1280.png">
+<img src="{{site.baseurl}}/post-assets/{{page.slug}}/tumblr_mszso5TWVp1r5aoz1o1_1280.png">
