--- a/_posts/2013-09-11-if-bieber-programmed.html
+++ b/_posts/2013-09-11-if-bieber-programmed.html
@@ -6,4 +6,5 @@ tags:
 - someday
 tumblr_url: http://chartsnthings.tumblr.com/post/60953933427/if-bieber-programmed
 ---
-<img src="{{site.baseurl | asset_path: page.id}}/tumblr_msz81yvZnf1r5aoz1o1_1280.jpg">
+
+<img src="{{site.baseurl}}/post-assets/{{page.slug}}/tumblr_msz81yvZnf1r5aoz1o1_1280.jpg">
