--- a/_posts/2013-10-12-when-throw-works.html
+++ b/_posts/2013-10-12-when-throw-works.html
@@ -6,5 +6,4 @@ tags:
 - javascript
 slug: post-assets/2013-10-when-throw-works
 ---
-
-<img src="/{{page.slug}}/throw.png">
+<img src="{{site.baseurl}}/post-assets/{{page.slug}}/throw.png">
