--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: chartsnthings
 ---
-<p class="site-intro">Kevin Quealy’s blog of data sketches, process and junk, mostly from the New York Times Graphics Department</p>
+<p class="site-intro"><a href="http://www.twitter.com/KevinQ">Kevin Quealy</a>’s blog of data sketches, process and junk, mostly from the New York Times Graphics Department</p>
 
 <div id="home">
   <div class="main-posts">
